welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:2: error: Missing closing brace `}' assumed here
override def run() {
^