welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
 var biscuit:Int=0;var caseOrange:Int=0
while(2*biscuit!=caseOrange+1) {avance(); if (estSurBiscuit()) {biscuit=biscuit+1};
getCouleursol(orange); if(getCouleurSol(orange)){caseOrange=caseOrange+1} }
